# NOAA-1-yearly-average

./: .gitignore  pyproject.toml  temp_records.csv
dev_files/: original_insert_flow.py
src/: flow.py  subflows.py  support.py  tasks.py
src/sql/: query.sql
